--- a/index.html
+++ b/index.html
@@ -1,12 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
+    <title>Image Master Tool</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <p>This is my GitHub Pages site.</p>
+    <!-- Header -->
+    <header>
+        <div class="container">
+            <h1>Image Master</h1>
+            <nav>
+                <ul>
+                    <li><a href="#features">Tính năng</a></li>
+                    <li><a href="#pricing">Giá bán</a></li>
+                    <li><a href="#contact">Liên hệ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <h2>Phần mềm xử lý ảnh mạnh mẽ</h2>
+            <p>Trải nghiệm tính năng xử lý ảnh và chuyển đổi dữ liệu tiên tiến nhất.</p>
+            <a href="#pricing" class="btn">Mua ngay</a>
+        </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="features">
+        <div class="container">
+            <h2>Tính năng nổi bật</h2>
+            <div class="feature-list">
+                <div class="feature">
+                    <h3>Pixel Art</h3>
+                    <p>Tạo và chỉnh sửa ảnh pixel dễ dàng.</p>
+                </div>
+                <div class="feature">
+                    <h3>Data2Image</h3>
+                    <p>Chuyển đổi dữ liệu thành hình ảnh.</p>
+                </div>
+                <div class="feature">
+                    <h3>Image2Data</h3>
+                    <p>Chuyển đổi hình ảnh thành dữ liệu.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Pricing Section -->
+    <section id="pricing" class="pricing">
+        <div class="container">
+            <h2>Giá bán</h2>
+            <div class="pricing-table">
+                <div class="pricing-plan">
+                    <h3>Gói cơ bản</h3>
+                    <p>500,000 VND</p>
+                    <ul>
+                        <li>Tính năng Pixel Art</li>
+                        <li>Data2Image</li>
+                        <li>Image2Data</li>
+                    </ul>
+                    <a href="#" class="btn">Mua ngay</a>
+                </div>
+                <div class="pricing-plan">
+                    <h3>Gói nâng cao</h3>
+                    <p>1,000,000 VND</p>
+                    <ul>
+                        <li>Tính năng Pixel Art</li>
+                        <li>Data2Image</li>
+                        <li>Image2Data</li>
+                        <li>Hỗ trợ 24/7</li>
+                    </ul>
+                    <a href="#" class="btn">Mua ngay</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2>Liên hệ</h2>
+            <form action="#">
+                <label for="name">Tên</label>
+                <input type="text" id="name" name="name" required>
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+                <label for="message">Tin nhắn</label>
+                <textarea id="message" name="message" required></textarea>
+                <button type="submit" class="btn">Gửi</button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Image Master. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
